Checking in changes prior to tagging of version 0.02.
Changelog diff is:

diff --git a/Changes b/Changes
index 7339492..dce161a 100644
--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension Data::TxnBuffer

+0.02  2011-01-25T14:29:36+09:00
+      - added length accessor
+
 0.01  2011-01-25T12:39:34+09:00
       - original version

--- a/README
+++ b/README
@@ -66,6 +66,9 @@ ACCESSORS
   $buf->data
     Return buffer's whole data.
 
+  $buf->length
+    Return buffer's data length. (bytes)
+
 BASIC METHODS
   $buf->read($bytes)
     Read $bytes data from buffer and return the data. If there's not enough
